<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.stemmaweb.rest</groupId>
	<artifactId>stemmarest</artifactId>
	<packaging>war</packaging>
	<version>1.1-SNAPSHOT</version>
	<name>stemmarest Jersey Webapp</name>
	<build>
		<finalName>stemmarest</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<inherited>true</inherited>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			<!-- 
				update maven-war-plugin to resolve error: 
				Could not initialize class org.apache.maven.plugin.war.util.WebappStructureSerializer
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>
<!--
			<plugin>
                <groupId>com.qmino</groupId>
                <artifactId>miredot-plugin</artifactId>
                <version>2.4.2-Java11-SNAPSHOT</version>
                <dependencies>
                    <dependency>
                        <groupId>org.neo4j</groupId>
                        <artifactId>neo4j</artifactId>
                        <version>${neo4j-version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <goals>
                            <goal>restdoc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <licence>MIREDOT_LICENSE</licence>
                    <restModel>
                        <restFramework>
                            <name>jax-rs</name>
                        </restFramework>
                    </restModel>
                    <output>
                        <title>Stemmarest - a repository for variant text traditions</title>
                        <html>
                            <initialCollapseLevel>3</initialCollapseLevel>
                            <intro>build/docintro.html</intro>
                        </html>
                    </output>
                    <!__ insert other configuration here (optional) __>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>cp</executable>
					<arguments>
						<argument>-R</argument>
						<argument>target/miredot</argument>
						<argument>src/main/webapp/WEB-INF/docs</argument>
					</arguments>
				</configuration>
			</plugin>
 -->
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-servlet-core</artifactId>
			<version>4.0.0-M2</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-server</artifactId>
			<version>${jersey-version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
			<version>${jersey-version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-common</artifactId>
			<version>${jersey-version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-multipart</artifactId>
			<version>${jersey-version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>${jersey-version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<!--suppress MavenPackageUpdate -->
			<version>2.20.0</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>txw2</artifactId>
			<version>4.0.6</version>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>6.1.0</version>
		</dependency>

		<!-- Jackson 2.x Core -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson-version}</version>
		</dependency>
		<!-- Jackson 2.x Annotations -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.21</version>
		</dependency>
		<!-- Jackson 2.x Databind -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson-version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>${jackson-version}</version>
   		</dependency>
		<!-- Jackson 2.x extra datatypes -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>${jackson-version}</version>
		</dependency>
		<!-- MIME type guessing -->
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-core</artifactId>
			<version>3.2.3</version>
		</dependency>		<!-- Excel sheet parsing -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.4.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.4.1</version>
			<!-- exclude dependency to resolve duplicate module error -->
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Graphviz Dot parsing -->
		<dependency>
			<groupId>com.alexmerz</groupId>
			<artifactId>graphviz</artifactId>
			<!--suppress MavenModelInspection -->
			<version>0.8.6</version>
		</dependency>
		<dependency>
			<groupId>org.checkerframework</groupId>
			<artifactId>checker-qual</artifactId>
			<version>3.51.1</version>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.12.0</version>
		</dependency>
		<!-- Newick parsing -->
		<dependency>
			<groupId>com.github.qurben</groupId>
			<artifactId>libnewicktree</artifactId>
			<version>1.0</version>
		</dependency>
		<!-- Neo4J dependencies -->
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j</artifactId>
			<version>${neo4j-version}</version>
		</dependency>
<!-- 
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j-bolt</artifactId>
			<version>${neo4j-version}</version>
		</dependency>
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j-common</artifactId>
			<version>${neo4j-version}</version>
		</dependency>
-->

		<!-- Used for better documentation of REST interfaces -->
		<dependency>
			<groupId>com.qmino</groupId>
			<artifactId>miredot-annotations</artifactId>
			<version>1.6.0</version>
		</dependency>
		<!-- Test dependencies -->
		<!-- <dependency> <groupId>${jersey-group}</groupId> <artifactId>jersey-client</artifactId> 
			<version>${jersey-version}</version> <scope>test</scope> </dependency> <dependency> 
			<groupId>${jersey-group}.jersey-test-framework</groupId> <artifactId>jersey-test-framework-grizzly2</artifactId> 
			<version>${jersey-version}</version> <scope>test</scope> </dependency> -->
		<dependency>
			<groupId>org.glassfish.jersey.test-framework</groupId>
			<artifactId>jersey-test-framework-core</artifactId>
			<version>${jersey-test-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.test-framework.providers</groupId>
			<artifactId>jersey-test-framework-provider-grizzly2</artifactId>
			<version>${jersey-test-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>${jersey-version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.carrotsearch</groupId>
			<artifactId>junit-benchmarks</artifactId>
			<version>0.7.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.2.220</version>
			<scope>test</scope>
		</dependency>
<!-- 
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j-kernel</artifactId>
			<version>${neo4j-version}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
-->
		<dependency>
			<groupId>org.neo4j.community</groupId>
			<artifactId>it-test-support</artifactId>
			<version>${neo4j-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j-io</artifactId>
			<version>${neo4j-version}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.neo4j.test</groupId>
			<artifactId>neo4j-harness</artifactId>
			<version>${neo4j-version}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>

        <dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20240303</version>
		</dependency>
	</dependencies>
	<properties>
		<neo4j-version>2025.09.0</neo4j-version>
		<jackson-version>2.21.1</jackson-version>
		<jersey-version>4.0.2</jersey-version>
		<jersey-test-version>4.0.2</jersey-test-version>
	</properties>

	<repositories>
		<repository>
			<id>repository</id>
			<url>file://${basedir}/repository</url>
		</repository>
		<repository>
			<id>miredot</id>
			<name>Miredot Releases</name>
			<url>https://secure-nexus.miredot.com/content/repositories/miredot/</url>
		</repository>
		<repository>
			<id>miredot-snapshot</id>
			<name>Miredot Snapshots</name>
			<url>https://secure-nexus.miredot.com/content/repositories/miredot-snapshots/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>miredot</id>
			<name>Miredot Releases</name>
			<url>https://secure-nexus.miredot.com/content/repositories/miredot/</url>
		</pluginRepository>
		<pluginRepository>
			<id>miredot-snapshot</id>
			<name>Miredot Snapshots</name>
			<url>https://secure-nexus.miredot.com/content/repositories/miredot-snapshots/</url>
		</pluginRepository>
	</pluginRepositories>


</project>
